--- a/package.json
+++ b/package.json
@@ -17,9 +17,5 @@
     "@types/node": "^18.15.11",
     "serialport": "^10.5.0"
   },
-  "dependencies": {
-    "fast-json-parse": "^1.0.3",
-    "ioredis": "^5.3.1",
-    "redis": "^4.6.5"
-  }
+  "dependencies": {}
 }
