--- a/package.json
+++ b/package.json
@@ -8,20 +8,19 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "build": "tsc",
+    "tsc": "./node_modules/typescript/bin/tsc",
     "start:app": "node dist/app.js",
     "start": "nodemon"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "@types/node": "^18.15.11",
     "@types/ws": "^8.5.4",
-    "serialport": "^10.5.0",
-    "ws": "^8.13.0"
-  },
-  "dependencies": {
-    "@types/crypto-js": "^4.1.1",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
-    "validate": "^5.2.0"
+    "serialport": "^10.5.0",
+    "validate": "^5.2.0",
+    "ws": "^8.13.0",
+    "typescript": "^5.0.4"
   }
 }
