--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "tsc": "./node_modules/typescript/bin/tsc",
+    "build": "./node_modules/typescript/bin/tsc",
     "start:app": "node dist/app.js",
     "start": "nodemon"
   },
@@ -19,8 +19,9 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "serialport": "^10.5.0",
+    "typescript": "^5.0.4",
     "validate": "^5.2.0",
-    "ws": "^8.13.0",
-    "typescript": "^5.0.4"
-  }
+    "ws": "^8.13.0"
+  },
+  "dependencies": {}
 }
