--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "serialport": "^10.5.0",
     "typescript": "^5.0.4",
     "validate": "^5.2.0",
-    "ws": "^8.13.0"
-  },
-  "dependencies": {}
+    "ws": "^8.13.0",
+    "nodemon": "^2.0.22"
+  }
 }
