sigh, i don tire

--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
     "start:app": "node dist/app.js",
     "start": "nodemon"
   },
-  "devDependencies": {
+  "dependencies": {
     "@types/crypto-js": "^4.1.1",
     "@types/node": "^18.15.11",
     "@types/ws": "^8.5.4",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
+    "nodemon": "^2.0.22",
     "serialport": "^10.5.0",
     "typescript": "^5.0.4",
     "validate": "^5.2.0",
-    "ws": "^8.13.0",
-    "nodemon": "^2.0.22"
+    "ws": "^8.13.0"
   }
 }
