--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
     "start:app": "node dist/app.js",
     "start": "nodemon"
   },
-  "dependencies": {
+  "devDependencies": {
     "@types/crypto-js": "^4.1.1",
     "@types/ws": "^8.5.4",
+    "@types/node": "^18.7.6",
+    "typescript": "^5.0.4",
+    "nodemon": "^2.0.22"
+  },
+  "dependencies": {
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
-    "nodemon": "^2.0.22",
-    "@types/node": "^18.7.6",
     "serialport": "^10.5.0",
-    "typescript": "^5.0.4",
     "validate": "^5.2.0",
     "ws": "^8.13.0"
   }
