--- a/package.json
+++ b/package.json
@@ -16,14 +16,16 @@
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
-    "@types/ws": "^8.5.4",
     "@types/node": "^18.7.6",
-    "typescript": "^5.0.4",
-    "nodemon": "^2.0.22"
+    "@types/ws": "^8.5.4",
+    "nodemon": "^2.0.22",
+    "typescript": "^5.0.4"
   },
   "dependencies": {
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
+    "mongodb": "^5.2.0",
+    "mongoose": "^7.0.3",
     "serialport": "^10.5.0",
     "validate": "^5.2.0",
     "ws": "^8.13.0"
