--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
+    "@types/express": "^4.17.17",
     "@types/node": "^18.7.6",
     "@types/ws": "^8.5.4",
     "nodemon": "^2.0.22",
