--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "hermes",
+  "name": "@pipedev/hermes",
   "version": "1.0.0",
   "description": "Simple pub sub messaging tool",
   "main": "index.js",
-  "repository": "https://github.com/pipethedev/hermes",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pipethedev/hermes.git"
+  },
   "author": "Muritala David",
   "license": "MIT",
   "private": false,
   "scripts": {
-    "build": "tsc",
+    "build": "tsc --declaration",
     "start:app": "node dist/app.js",
     "start": "nodemon",
-    "publisher": "node dist/src/publisher.js",
-    "subscriber": "node dist/src/subscriber.js"
+    "postversion" : "git push && git push --tags"
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
@@ -30,5 +32,14 @@
     "serialport": "^10.5.0",
     "validate": "^5.2.0",
     "ws": "^8.13.0"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/pipethedev/hermes/issues"
+  },
+  "homepage": "https://github.com/pipethedev/hermes#readme",
+  "keywords": [
+    "Pubsub",
+    "messenger",
+    "socket"
+  ]
 }
